# kaiba

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/kaiba/: Cargo.toml  Shuttle.toml
crates/kaiba-cli/: Cargo.toml  README.md
crates/kaiba-cli/src/: api.rs  config.rs  main.rs
crates/kaiba-integration-discord/: Cargo.toml
crates/kaiba-integration-discord/src/: client.rs  config.rs  integration.rs  lib.rs  webhook.rs
crates/kaiba-server/: Cargo.toml
crates/kaiba-server/migrations/: 0001_create_kaiba_tables.sql  0003_add_webhooks.sql  0004_add_webhook_payload_format.sql  0005_add_last_digest_at.sql  0006_add_last_learn_at.sql
crates/kaiba-server/src/: auth.rs  main.rs
crates/kaiba-server/src/adapters/: mod.rs  webhook.rs
crates/kaiba-server/src/adapters/formatters/: github_issue.rs  mod.rs
crates/kaiba-server/src/adapters/postgres/: mod.rs  rei_repository.rs  tei_repository.rs  webhook_repository.rs
crates/kaiba-server/src/application/: mod.rs  rei_service.rs  tei_service.rs
crates/kaiba-server/src/models/: call.rs  dashboard.rs  memory.rs  mod.rs  rei.rs  tei.rs  webhook.rs
crates/kaiba-server/src/routes/: call.rs  dashboard.rs  memory.rs  mod.rs  prompt.rs  rei.rs  search.rs  tei.rs  trigger.rs  webhook.rs
crates/kaiba-server/src/services/: decision.rs  digest.rs  qdrant.rs  scheduler.rs  self_learning.rs
crates/kaiba-server/templates/: rei_call.jinja  rei_casting.jinja  rei_claude_code.jinja  rei_raw.jinja
crates/kaiba/migrations/: 0002_add_energy_regen.sql
crates/kaiba/src/: lib.rs  main.rs
crates/kaiba/src/domain/: errors.rs  mod.rs
crates/kaiba/src/domain/entities/: call.rs  memory.rs  message.rs  mod.rs  prompt.rs  rei.rs  tei.rs  webhook.rs
crates/kaiba/src/domain/services/: mod.rs
crates/kaiba/src/domain/value_objects/: memory_type.rs  mod.rs  provider.rs  tag_match_mode.rs
crates/kaiba/src/models/: call.rs  memory.rs  mod.rs  prompt.rs  rei.rs  tei.rs
crates/kaiba/src/ports/: integration.rs  mod.rs  webhook.rs
crates/kaiba/src/ports/repositories/: memory_repository.rs  mod.rs  rei_repository.rs  tei_repository.rs  webhook_repository.rs
crates/kaiba/src/ports/services/: embedding.rs  llm_provider.rs  mod.rs  web_search.rs
crates/kaiba/src/routes/: call.rs  learning.rs  memory.rs  mod.rs  prompt.rs  rei.rs  search.rs  swagger.rs  tei.rs
crates/kaiba/src/services/: decision.rs  digest.rs  embedding.rs  mod.rs  qdrant.rs  scheduler.rs  self_learning.rs  web_search.rs
docs/design/: api-design.md  architecture.md
examples/github-actions/: README.md  trigger.yml
