[package]
name = "kaiba-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Kaiba - Memory upload and management"

[[bin]]
name = "kaiba"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
colored = "2"
dialoguer = "0.11"
