[package]
name = "kaiba-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for Kaiba - AI persona memory management system"
keywords = ["ai", "memory", "persona", "cli", "llm"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "kaiba"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
dirs = "5"
colored = "2"
dialoguer = "0.11"
urlencoding = "2"
