[package]
name = "kaiba-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Kaiba API Server - HTTP API and infrastructure adapters"

[[bin]]
name = "kaiba-server"
path = "src/main.rs"

[dependencies]
# Domain library
kaiba = { version = "0.2.0", path = "../kaiba" }

# Shuttle
shuttle-runtime = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-shared-db = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Qdrant
qdrant-client = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }

# LLM Toolkit
llm-toolkit = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = "0.1"

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# HMAC signing for webhooks
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Protobuf types (for Qdrant datetime filter)
prost-types = "0.13"
