[package]
name = "kaiba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Kaiba domain library - Core types and interfaces for AI persona system"

[lib]
name = "kaiba"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }
